# MiNiChat

./: README.md
Chat_Project/: CMakeLists.txt
Chat_Project/client/: CMakeLists.txt
Chat_Project/client/src/: main.cpp
Chat_Project/common/include/server/: chatserver.hpp  chatservice.hpp  public.hpp
Chat_Project/server/: CMakeLists.txt
Chat_Project/server/src/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
Chat_Project/server/src/db/: db.cpp
Chat_Project/server/src/model/: friendmodel.cpp  groupmodel.cpp  offlinemsgmodel.cpp  usermodel.cpp
Chat_Project/server/src/redis/: redis.cpp
chat/: CMakeLists.txt  addfrienddialog.hpp  addgroupdialog.hpp  chatwidget.cpp  chatwidget.h  chatwidget.ui  creategroupdialog.hpp  flasheffectmanager.cpp  flasheffectmanager.h  flowlightwidget.cpp  flowlightwidget.h  group.hpp  groupinformdialog.hpp  groupuser.hpp  historynotification.cpp  historynotification.h  infowidget.hpp  main.cpp  mybutton.cpp  mybutton.h  public.hpp  regwidget.cpp  regwidget.h  regwidget.ui  resources.qrc  user.hpp  userinfodialog.cpp  userinfodialog.h  widget.cpp  widget.h  widget.ui
chat/Shaders/: flowlight.frag  flowlight.vert
chatServer/: CMakeLists.txt  Login_QPS_test.py  Reg_QPS_test.py  chatserver.cpp  chatserver.hpp  chatservice.cpp  chatservice.hpp  chatservicestatemanager.cpp  chatservicestatemanager.h  db.cpp  db.h  friendmodel.cpp  friendmodel.hpp  group.hpp  groupmodel.cpp  groupmodel.hpp  groupuser.hpp  main.cpp  monitor.sh  monitor_metrics.py  mysqlconnpool.cpp  mysqlconnpool.h  offlinemsgmodel.cpp  offlinemsgmodel.hpp  public.hpp  redis.cpp  redis.hpp  redisconnpool.cpp  redisconnpool.h  user.hpp  usermodel.cpp  usermodel.hpp  登录QPS压力检测
test/: CMakeLists.txt
备份文件/: mysqlconnpool.cpp  mysqlconnpool.h
(+9 files in other folders)
